@@ -93,6 +93,7 @@ SCons/Tool/RCS.py
 SCons/Tool/rmic.py
 SCons/Tool/SCCS.py
 SCons/Tool/sgiar.py
+SCons/Tool/sgic++.py
 SCons/Tool/sgicc.py
 SCons/Tool/sgilink.py
 SCons/Tool/sunar.py
